/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2012-11-07 21:35 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * utils/misc/hblib.c
    ! minor optimization

2012-11-07 21:19 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * utils/misc/hblib.c
    * replace hard-coded .obj with environmental OBJEXT setup in bat files

2012-11-07 21:00 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * utils/misc/hblib.c
    + added functionalities to process rtl.lib and xHarbour.dll

  * ChangeLog
    ! corrected typo: GTGUI -> GTWVT

2012-11-07 20:53 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/vm/fm.c
    ! pacify BCC warnings when HB_NO_VM_ALL is defined

  + winmake/dll.lst
  + winmake/rtl.lst
  * winmake/common2.mak
  * winmake/makefile.bc
  * winmake/makefile.vc
  * winmake/makefile.gc
  * winmake/makefile.wc
  * winmake/makefile.pc
  * winmake/makefile.dc
    ! rtl.lib and xHarbour.dll now using common command

  * winmake/compile.mak
    ! compile GTWVT in C++ mode for __DMC__

  * winmake/common.mak
    ! corrected typo causing GTGUI not linked into xHarbour.dll

2012-11-06 11:47 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * utils/misc/hblib.c
    ! fix memory leak trap

2012-11-06 10:32 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * contrib/hbmxml/hbmxml.c
  * contrib/hbmxml/mxml_nod.c
    ! now discard using raw pointer because GC features are already fixed by
      Przemek's patch. mxml_nod.c has therefore been synched with hrb.

2012-11-06 07:06 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * contrib/hbmxml/hbmxml.c
  * contrib/hbmxml/tests/testmxml.prg
  * contrib/hbmxml/tests/custom.prg
    ! fixed memory leaks
    NOTE: Using raw pointer because GC features cause GPF. Anybody helps?

2012-11-05 23:28 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * winmake/makefile.bc